--- a/src/main/resources/templates/layout/defaultLayout2.html
+++ b/src/main/resources/templates/layout/defaultLayout2.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <main class="content" th:fragment="content">
+    <main class="content" layout:fragment="content">
         <!-- Page-specific content will be inserted here -->
         <p>This is default content from layout.html. If you see this, the page did not provide its own content fragment.</p>
     </main>
