--- a/src/main/resources/templates/plantMaster/plantMasterForm.html
+++ b/src/main/resources/templates/plantMaster/plantMasterForm.html
@@ -22,7 +22,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
 
-        <form th:action="@{/asset/plants/save}" th:object="${plantMaster}" method="post" class="needs-validation" novalidate>
+        <form th:action="@{/plantMaster/plantMasterSave}" th:object="${plantMaster}" method="post" class="needs-validation" novalidate>
             <!-- Hidden fields for IDs and audit info if not part of form -->
             <input type="hidden" th:field="*{companyId}" />
             <input type="hidden" th:field="*{createBy}" />
@@ -180,7 +180,7 @@
             
             <div class="mt-4">
                 <button type="submit" class="btn btn-primary">Save Plant Master</button>
-                <a th:href="@{/asset/plants/list(companyId=${plantMaster.companyId}, siteId=${plantMaster.siteId})}" class="btn btn-secondary">Cancel</a>
+                <a th:href="@{/plantMaster/plantMasterList}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
