--- a/bin/main/templates/inventoryMaster/inventoryMasterForm.html
+++ b/bin/main/templates/inventoryMaster/inventoryMasterForm.html
@@ -22,7 +22,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
 
-        <form th:action="@{/asset/inventories/save}" th:object="${inventoryMaster}" method="post" class="needs-validation" novalidate>
+        <form th:action="@{/inventoryMaster/inventoryMasterSave}" th:object="${inventoryMaster}" method="post" class="needs-validation" novalidate>
             <!-- Hidden fields for IDs and audit info if not part of form -->
             <input type="hidden" th:field="*{companyId}" />
             <input type="hidden" th:field="*{deleteMarkYN}" />
@@ -131,7 +131,7 @@
             
             <div class="mt-4">
                 <button type="submit" class="btn btn-primary">Save Inventory Master</button>
-                <a th:href="@{/asset/inventories/list(companyId=${inventoryMaster.companyId}, siteId=${inventoryMaster.siteId})}" class="btn btn-secondary">Cancel</a>
+                <a th:href="@{/inventoryMaster/inventoryList}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
