--- a/bin/main/templates/memo/memoForm.html
+++ b/bin/main/templates/memo/memoForm.html
@@ -31,13 +31,12 @@
                             <h5 class="mb-0" th:text="${memo != null ? '메모 수정' : '메모 등록'}"></h5>
                         </div>
                         <div class="card-body">
-                            <form th:action="@{/memo/save}" method="post" th:object="${memo}">
+                            <form th:action="@{/memo/memoSave}" method="post" th:object="${memo}">
                                 <input type="hidden" name="memoId" th:value="${memo?.memoId}">
                                 <input type="hidden" name="companyId" th:value="${memo?.companyId}">
                                 <input type="hidden" name="siteId" th:value="${memo?.siteId}">
                                 <input type="hidden" name="createBy" th:value="${memo?.createBy}">
                                 <input type="hidden" name="createDate" th:value="${memo?.createDate}">
-                                <input type="hidden" name="deleteMarkYN" th:value="${memo?.deleteMarkYN}">
                                 <input type="hidden" name="viewCount" th:value="${memo?.viewCount}">
 
                                 <div class="mb-3">
